[metadata]
name = boa
version = attr: boa.__version__
url = https://github.com/Kitesoft-dev/boa
author = Kitesoft
# author_email = foundation@djangoproject.com
description = A tool to provide Backup Over Anything.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = GNU General Public License v3.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.6
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
project_urls =
    # Documentation = https://docs.djangoproject.com/
    # Release notes = https://docs.djangoproject.com/en/stable/releases/
    # Funding = https://www.djangoproject.com/fundraising/
    Source = https://github.com/Kitesoft-dev/boa
    Tracker = https://github.com/Kitesoft-dev/boa/issues

[options]
packages = find:
package_dir =
include_package_data = true
python_requires = >= 3.6
