[metadata]
name = boa
version = attr: boa.__version__
url = https://github.com/Kitesoft-dev/boa
author = attr: boa.__author__
author_email = attr: boa.__author_email__
description = A tool to Backup anything Over Anything.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.6
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    # Documentation =
    # Release notes =
    # Funding =
    Source = https://github.com/Kitesoft-dev/boa
    Tracker = https://github.com/Kitesoft-dev/boa/issues

[options]
packages = find:
package_dir =
include_package_data = true
python_requires = >= 3.6

[flake8]
exclude = .git,.tox,venv
max-line-length = 99
max-complexity = 10

[isort]
profile = black
src_paths = boa,tests

[coverage:run]
branch = true
source = boa
command_line = -m pytest -sv

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    def __repr__
    if self\.debug
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
